<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context="makdroid.voxpopuli.ui.fragments.PreferenceFragment">

    <TextView
        android:id="@+id/pref_sync_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/pref_sync_setting"
        android:textAppearance="@style/ContentTextViewNormal" />

    <TextView
        android:id="@+id/pref_sync_frequency_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pref_sync_setting"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/pref_sync_frequency_summary"
        android:textAppearance="@style/ContentTextViewSmall" />

    <RadioGroup
        android:id="@+id/rbg_pref_sync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pref_sync_frequency_summary"
        android:layout_marginTop="@dimen/spacing_medium">

        <RadioButton
            android:id="@+id/rb_pref_sync_frequency_4h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/pref_sync_frequency_4h"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rb_pref_sync_frequency_12h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_sync_frequency_12h"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rb_pref_sync_frequency_24h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_sync_frequency_24h"
            android:textColor="@color/white" />
    </RadioGroup>

</RelativeLayout>
