<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/app_name_separator"
            android:textAppearance="@style/TextViewHeadline" />

        <ImageView
            android:id="@+id/orzelBackground"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/godlo"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/about_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/orzelBackground"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/example_lorem"
            android:textAppearance="@style/ContentTextViewNormal" />

        <View xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/separator_about_app"
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/about_app"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/separator_about_app"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/about_version"
            android:textAppearance="@style/ContentTextViewNormal" />

        <View xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/separator_about_version"
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/about_version"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/about_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/separator_about_version"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/about_contact"
            android:textAppearance="@style/About.Group.Text" />

        <View xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/separator_about_contact"
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/about_contact"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/about_contact_developer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/separator_about_contact"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/about_contact_developer_name"
            android:textAppearance="@style/ContentTextViewNormal" />

        <View xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/separator_about_contact_developer_name"
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/about_contact_developer_name"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/about_contact_developer_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/about_contact_developer_name"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/about_contact_developer_email"
            android:textAppearance="@style/ContentTextViewNormal" />

    </RelativeLayout>
</ScrollView>