<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/details_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:singleLine="false"
            android:textAppearance="@style/TextViewHeadline" />

        <TextView
            android:id="@+id/tv_card_add_date_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_card_title"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/header_card_add_date"
            android:textAppearance="@style/ContentTextViewNormal" />

        <TextView
            android:id="@+id/tv_card_end_date_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_card_title"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/header_card_end_date"
            android:textAppearance="@style/ContentTextViewNormal" />

        <TextView
            android:id="@+id/tv_card_add_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_card_add_date_header"
            android:textAppearance="@style/ContentTextViewNormal" />

        <TextView
            android:id="@+id/tv_card_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_card_end_date_header"
            android:textAppearance="@style/ContentTextViewNormal" />


        <TextView
            android:id="@+id/tv_card_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btn_no"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/btn_no"
            android:layout_below="@+id/tv_card_end_date"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="fill_horizontal"
            android:singleLine="false"
            android:textAppearance="@style/ContentTextViewNormal" />

        <makdroid.voxpopuli.utils.piechart.PieChartVP
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_card_content"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btn_yes"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/chart"
            android:text="@string/answer_yes" />

        <Button
            android:id="@+id/btn_no"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/chart"
            android:text="@string/answer_no" />

        <TextView
            android:id="@+id/tv_card_user_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_yes"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/ContentTextViewNormal"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/pb_loading"
            style="@style/AppTheme.ProgressBar"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>